syntax = "proto3";

option go_package = "web-service/grpc/todo";

package todo;

service TodoManager {
  rpc CreateTodo(CreateTodoRequest) returns (Todo) {}
  rpc FetchTodos(FetchTodosRequest) returns (stream Todo) {}
  rpc FetchTodo(FetchTodoRequest) returns (Todo) {}
  rpc DeleteTodo(DeleteTodoRequest) returns (Todo) {}
}

message Todo {
  FetchTodoRequest id = 1;
  string text = 2;
  bool done = 3;
  User user = 4;
}

message User {
  string id = 1;
  string name = 2;
}

message FetchTodosRequest {
  int32 fetch_count = 1;
}

message FetchTodoRequest {
  string id = 1;
}

message DeleteTodoRequest {
  string id = 1;
}

message CreateTodoRequest {
  string text = 1;
  string user_id = 2;
}
